fix: updated env file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DB_USERNAME=root
-DB_PASSWORD=miclave123
-DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=bootcamp_project
+DB_USERNAME=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_NAME=
